--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Dynamic QR code management tool",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production nodemon app.js",
-    "dev": "cross-env NODE_ENV=development nodemon app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
